nginx-ingress-controller/manifestos/ingress-dominio-apache-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dominio
  labels:
    name: ingress-dominio
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.158.101.96.103.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80

  - host: apache.158.101.96.103.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apache
            port: 
              number: 80
